<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanc">

    <!-- Arrière-plan de la barre du haut. Sert de référence pour les autres éléments. -->
    <View
        android:id="@+id/top_bar_background"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_bar_background_profil" />

    <ImageButton
        android:id="@+id/arrow_back_button" 
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/arrow_back_white"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent">

    </ImageButton>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp">

        <!-- Texte de salutation, centré horizontalement dans la barre du haut -->
        <TextView
            android:id="@+id/greeting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil_de"
            android:textColor="@color/blanc"
            android:textSize="50sp"/>

        <View
            android:layout_width="8dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/user_profil_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thierry"
            android:textColor="@color/blanc"
            android:textSize="50sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Image de profil, centrée horizontalement et "à cheval" sur la barre du haut -->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/pfp"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/top_bar_background"
        android:layout_marginBottom="-70dp"
        android:background="@drawable/rounded_pfp_circle_white"/>

    <View
        android:id="@+id/view_after_top_bar_background"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/top_bar_background"/>

    <!-- Texte de rôle, positionné sous l'image de profil -->
    <TextView
        android:id="@+id/metier_enseignant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enseignant_d_eps"
        android:layout_below="@id/view_after_top_bar_background"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textColor="@color/noir">

    </TextView>

</RelativeLayout>
