<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:id="@+id/FondBleu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fond_bleu_connexion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kanit"
        android:text="@string/connexion_page_title"
        android:textSize="40sp"
        android:textColor="@color/blanc"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kanit_light"
        android:hint="@string/connexion_page_email_input"
        android:textColor="#8D8D8D"
        android:textSize="25sp"
        android:textStyle="normal"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <View
        android:layout_width="400dp"
        android:layout_height="2dp"
        android:background="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@id/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordContainer"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/connexion_page_password_input"
            android:textColor="#8D8D8D"
            android:fontFamily="@font/kanit_light"
            android:inputType="textPassword"
            android:background="@null"
            android:textSize="25sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/oeilIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/oeilIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/oeil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="Afficher/masquer le mot de passe"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="400dp"
        android:layout_height="2dp"
        android:background="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@id/passwordContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
